--- a/src/styles/login.module.scss
+++ b/src/styles/login.module.scss
@@ -11,6 +11,11 @@
   line-height: 1.2;
 }
 
+.loading {
+  font-size: 12px;
+  line-height: 1.2;
+}
+
 .anchor {
   color: #1c7ed6;
   font-size: 14px;
