--- a/src/styles/Home.module.scss
+++ b/src/styles/Home.module.scss
@@ -124,8 +124,6 @@
   }
 }
 
-
-
 .container {
   padding: 0 2rem;
   height: 100%;
@@ -150,11 +148,9 @@
 
 .logout {
   border: none;
-  // display: block;
   line-height: 1;
   padding: 8px 12px;
   border-radius: 4px;
-  // text-decoration: none;
   color: #495057;
   font-size: 14px;
   font-weight: 500;
@@ -167,3 +163,44 @@
     background-color: #f8f9fa;
   }
 }
+
+.overlayOpened {
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  background-color: white;
+  z-index: 9999;
+  padding: 2rem;
+  list-style-type: none;
+}
+
+.overlayClosed {
+  display: none;
+}
+
+.overLayNav {
+  li {
+    &:not(:first-child) {
+      margin-top: 20px;
+    }
+  }
+}
+
+.overlayNavList {
+  border: none;
+  line-height: 1;
+  border-radius: 4px;
+  color: #495057;
+  font-size: 18px;
+  font-weight: 500;
+  cursor: pointer;
+  background-color: inherit;
+  padding: 0;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica,
+    Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
+
+  &:hover {
+    background-color: #f8f9fa;
+  }
+}
+
