--- a/src/styles/create.module.scss
+++ b/src/styles/create.module.scss
@@ -1,3 +1,5 @@
+@use "mediaquery";
+
 .inputWrapper {
   max-width: 800px;
   margin: 50px auto 0 auto;
@@ -9,7 +11,12 @@
 .buttonWrapper {
   display: flex;
   gap: 0 20px;
-  justify-content: center;
+  // justify-content: center;
+
+  @include mediaquery.tablet {
+    flex-direction: column;
+    gap: 20px 0;
+  }
 }
 
 .loader {
@@ -18,4 +25,5 @@
   // margin-bottom: 50px;
   margin: 50px auto 50px auto;
   display: block;
+  height: calc(100vh - 60px - 70px);
 }
