--- a/src/styles/table.module.scss
+++ b/src/styles/table.module.scss
@@ -1,3 +1,5 @@
+@use "mediaquery";
+
 .link {
   display: table-row;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica,
@@ -35,9 +37,30 @@
   // margin-bottom: 50px;
   margin: 50px auto 50px auto;
   display: block;
+  height: calc(100vh - 60px - 70px);
+}
+
+.wrapper {
+  margin-top: 40px;
 }
 
 .pagination {
   justify-content: center;
   margin-top: 30px;
 }
+
+.filterWrapper {
+  display: flex;
+  // justify-content: space-between;
+  gap: 0 20px;
+
+
+
+  @include mediaquery.tablet {
+    flex-direction: column;
+    gap: 20px;
+  }
+}
+  .datePicker {
+    min-width: 300px;
+  }
